# surfboard

./: .gitignore  Cargo.toml  Makefile  README.md
src/: display.rs  draw.rs  http.rs  main.rs  random.rs
src/system/: event.rs  resources.rs
src/task/: display.rs  mod.rs  orchestrate.rs  wifi.rs
surfboard/: Cargo.toml  Makefile  README.md  rust-toolchain.toml  surf_report.qoi  surf_report.qoi.1  surf_report.qoi.2
surfboard/.cargo/: config.toml
surfboard/src/: http.rs  main.rs
surfboard/src/fake/: fake_http.rs  mod.rs
surfboard/src/system/: drawing.rs  event.rs  mod.rs  net.rs  resources.rs
surfboard/src/task/: display.rs  mod.rs  orchestrate.rs  power.rs  state.rs  wifi.rs
surfboard_lib/: Cargo.toml  rust-toolchain.toml  surfboard.code-workspace
surfboard_lib/src/: data.rs  draw.rs  errors.rs  http.rs  image_data.rs  lib.rs  surf_report.rs
surfboard_lib/tests/: drawing_tests.rs
surfboard_lib/tests/data/: surf_report_response.json  tide_predictions.json
surfboard_lib/tools/: icon_processing.ipynb
surfboard_scraper/: .dockerignore  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  config.json  surfboard-scraper.service
surfboard_scraper/.cargo/: config
surfboard_scraper/.claude/: settings.local.json
surfboard_scraper/deploy/: config.json  install.sh  surfboard-scraper.service
surfboard_scraper/deploy/configs/: 0002.json  README.txt
surfboard_scraper/src/: conditions.rs  device_config.rs  http.rs  image_data.rs  lib.rs  main.rs  photo.rs  screen.rs  screensaver.rs  spot_details.rs  surf_report.rs  tide.rs  util.rs  wave.rs  weather.rs  wind.rs
surfboard_scraper/src/common/: draw_utils.rs  mod.rs
surfboard_scraper/src/message/: data.rs  draw.rs
surfboard_scraper/src/surf_report_24h/: data.rs  draw.rs  mod.rs  spot_details.rs  surf_report.rs
surfboard_scraper/src/surf_report_week/: data.rs  draw.rs
surfboard_scraper/src/surfline_types/: common.rs  conditions.rs  mod.rs  tide.rs  wave.rs  weather.rs  wind.rs
surfboard_scraper/tests/: test_device_config.rs  test_draw_screens.rs  test_surf_report.rs  test_surf_report_24h.rs
surfboard_scraper/tests/data/: surf_report.json  surf_report_24h.json
surfboard_scraper/tools/: icon_processing.ipynb
