[package]
edition = "2021"
name = "surfboard"
version = "0.1.0"
license = "Apache-2.0"

[features]
fake_responses = []

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

serde = { version = "1.0", default-features = false }
serde-json-core = "0.6.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.3", features = ["defmt"] }

embassy-executor = { version = "0.7", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "task-arena-size-131072",
] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

embassy-rp = { version = "0.4", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
## need these for pio
pio-proc = "0.3.0"
pio = "0.3.0"
## USB + logging via USB support (note: embassy-usb-logger requires portable-atomic with critical-section feature enabled)
embassy-usb-driver = { version = "0.1", features = ["defmt"] }
embassy-usb-logger = { version = "0.4" }
## network support
embassy-net = { version = "0.7", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "proto-ipv4",
    "proto-ipv6",
    "multicast",
    "dhcpv4-hostname",
] }
# wiznet ethernet driver support
embassy-net-wiznet = { version = "0.2", features = ["defmt"] }
## pico-w support
cyw43 = { version = "0.3", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4", features = ["defmt"] }
static_cell = { version = "2" }
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
heapless = "0.8.0"
rand_core = "0.9.3"
epd-waveshare = "0.6.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
assign-resources = "0.4.1"
reqwless = "0.13.0"
rand = { version = "0.9.1", default-features = false }
critical-section = "1.2.0"
tinyqoi = "0.2.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 2
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'

[dev-dependencies]
elf2uf2-rs = "2.1.1"
