[package]
name = "surfboard_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
epd-waveshare = "0.6.0"
heapless = { version = "0.8.0", features = ["serde"] }
serde-json-core = "0.6.0"
serde = { version = "1.0", default-features = false }
trait-variant = "0.1.2"
lexical = { version = "7.0.4", default-features = false, features = [
    "parse-floats",
] }
chrono = { version = "0.4.41", default-features = false }


[dev-dependencies]
embedded-graphics-simulator = { version = "0.7.0", default-features = false }
reqwest = "0.12.20"
tokio = { version = "1.45.1", features = ["full"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 2
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
