[package]
name = "surfboard_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
surfboard_lib = { path = "../surfboard_lib" }
chrono = "0.4.41"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1", features = ["full"] }
