[package]
name = "surfboard_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
surfboard_lib = { path = "../surfboard_lib" }
chrono = "0.4.41"
reqwest = { version = "0.12.20", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.94.0"
aws-lc-rs = { version = "1", features = ["bindgen"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dev-dependencies]
cross = "0.2.4"
