[package]
name = "surfboard_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.46.1", features = ["full"] }
aws-config = { version = "1.8.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96.0"
aws-lc-rs = { version = "1", features = ["bindgen"] }
embedded-graphics = { version = "0.8.1" }
embedded-graphics-simulator = { version = "0.7.0", default-features = false }
epd-waveshare = { version = "0.6.0" }
image = "0.25.6"
anyhow = "1.0.98"
url = "2.5.4"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dev-dependencies]
cross = "0.2.4"
